# learning_sample_1

./: LICENSE  README.md
services/: README.md
services/analytics/api_traffic/: pyproject.toml
services/analytics/mobile_traffic/: pyproject.toml
services/analytics/webapp_traffic/: pyproject.toml
services/business/: Pipfile
services/business/src/app/: main.py
services/business/src/domains/weather/app/: weather.py
services/business/src/domains/weather/app/adapters/: __init__.py
services/business/src/domains/weather/app/adapters/rest/: __init__.py  analyze_weather.py  analyze_weather_test.py
services/business/src/domains/weather/domain/ ports/: README.md
services/business/src/domains/weather/domain/core/analyze_weather/: analyze_weather.py
services/business/weather/: pyproject.toml
services/business/weather/src/weather/app/: app.py  main.py
services/business/weather/src/weather/app/adapters/rest/: __init__.py
services/business/weather/src/weather/domain/quick_forecast/: __init__.py
services/business/weather/src/weather/domain/quick_forecast/adapters/: __init__.py
services/business/weather/src/weather/domain/quick_forecast/core/: __init__.py
services/customer/: README.md
services/customer/user/: pyproject.toml
services/information_gathering_01/: pyproject.toml
services/information_gathering_01/src/core/weather/: __init__.py
services/information_gathering_01/src/core/weather/app/: __init__.py
services/information_gathering_01/src/core/weather/app/adapters/rest/: analyze_weather.py  test_analyze_weather.py
services/information_gathering_01/src/core/weather/use_cases/analyze_weather/adapters/weather_api/: api.py
services/information_gathering_01/src/core/weather/use_cases/analyze_weather/domain/: kupa.py
services/weather/alerting/: pyproject.toml
services/weather/analysis/: pyproject.toml
services/weather/analysis/src/analysis/: main.py
services/weather/forecast/: pyproject.toml
services/weather/severe/: pyproject.toml
(+1 files in other folders)
