[project]
name = "analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Jakub Koterba",email = "kkoterba9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-core (>=0.3.58,<0.4.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "trio (>=0.30.0,<0.31.0)",
    "asyncio (>=3.4.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
